fix: no `streetSnap` method on Android 14 为安卓 14 以上的系统框架加回对街拍模式的处理

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,5 +2,6 @@
 <resources>
     <string-array name="module_scope">
         <item>com.android.camera</item>
+        <item>android</item>
     </string-array>
 </resources>
